--- a/facebook.css
+++ b/facebook.css
@@ -3,6 +3,60 @@ body{
     margin: 0;
     padding: 0;
     background-color: #edf0f5;
+    height: 150vh;
 }
 
 
+.container{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+}
+.left-container{
+    width: 50%;
+    height: 50vh;
+
+}
+.left-container img{
+    width: 300px;
+    margin-left: 180px;
+    margin-bottom: 1px;
+}
+.left-container p{
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1c1e21;
+    font-weight: normal;
+    margin-left: 200px;
+
+}
+.right-container{
+    width: 50%;
+    height: 60vh;
+}
+.right-container .myform{
+    background-color: white;
+    border-radius: 5px;
+    height: 100%;
+    width: 60%;
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
+}
+.right-container .myform input.form-group{
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 350px;
+    height: 40px;
+    justify-content: flex-end;
+}
+input[type=submit]{
+    background-color: #1877f2;
+    border: none;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 700;
+
+}
