--- a/facebook.css
+++ b/facebook.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #edf0f5;
+    font-family: Arial, Helvetica, sans-serif;
     height: 150vh;
 }
 
